add Golden master & start refactoring