@@ -2,40 +2,53 @@ package io.tarcaye.remote.mob.shodo.trivia.runner.trivia.ugly;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
 
 public class Game {
-    ArrayList players = new ArrayList();
-    int[] places = new int[6];
-    int[] purses  = new int[6];
-    boolean[] inPenaltyBox  = new boolean[6];
+    private static final int MAX_PLAYERS = 6;
     
-    LinkedList popQuestions = new LinkedList();
-    LinkedList scienceQuestions = new LinkedList();
-    LinkedList sportsQuestions = new LinkedList();
-    LinkedList rockQuestions = new LinkedList();
+    List<String> players = new ArrayList<>();
+    
+    int[] places = new int[MAX_PLAYERS];
+    
+    int[] purses  = new int[MAX_PLAYERS];
+    
+    boolean[] inPenaltyBox  = new boolean[MAX_PLAYERS];
+    
+    List<String> popQuestions = new LinkedList<>();
+    
+    List<String> scienceQuestions = new LinkedList<>();
+    
+    List<String> sportsQuestions = new LinkedList<>();
+    
+    List<String> rockQuestions = new LinkedList<>();
     
     int currentPlayer = 0;
+    
     boolean isGettingOutOfPenaltyBox;
     
     public  Game(){
     	for (int i = 0; i < 50; i++) {
-			popQuestions.addLast("Pop Question " + i);
-			scienceQuestions.addLast(("Science Question " + i));
-			sportsQuestions.addLast(("Sports Question " + i));
-			rockQuestions.addLast(createRockQuestion(i));
+			popQuestions.add("Pop Question " + i);
+			scienceQuestions.add(("Science Question " + i));
+			sportsQuestions.add(("Sports Question " + i));
+			rockQuestions.add("Rock Question " + i);
     	}
     }
+    
+    public static Game createGame(List<String> players){
+        
+        Game game = new Game();
+        
+        players.forEach(game::add);
+        return game;
+    }
 
-	public String createRockQuestion(int index){
-		return "Rock Question " + index;
-	}
-	
 	public boolean isPlayable() {
 		return (howManyPlayers() >= 2);
 	}
 
-	public boolean add(String playerName) {
-		
+	public void add(String playerName) {
 		
 	    players.add(playerName);
 	    places[howManyPlayers()] = 0;
@@ -44,7 +57,6 @@ public class Game {
 	    
 	    System.out.println(playerName + " was added");
 	    System.out.println("They are player number " + players.size());
-		return true;
 	}
 	
 	public int howManyPlayers() {
@@ -89,13 +101,13 @@ public class Game {
 
 	private void askQuestion() {
 		if (currentCategory() == "Pop")
-			System.out.println(popQuestions.removeFirst());
+			System.out.println(popQuestions.remove(0));
 		if (currentCategory() == "Science")
-			System.out.println(scienceQuestions.removeFirst());
+			System.out.println(scienceQuestions.remove(0));
 		if (currentCategory() == "Sports")
-			System.out.println(sportsQuestions.removeFirst());
+			System.out.println(sportsQuestions.remove(0));
 		if (currentCategory() == "Rock")
-			System.out.println(rockQuestions.removeFirst());		
+			System.out.println(rockQuestions.remove(0));		
 	}
 	
 	
